[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llmutils-concat"
version = "0.1.0"
description = "A utility for concatenating files together for use with Large Language Models"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT"}
authors = [
    {name = "Liam Symonds"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "click>=8.0.0",
]

[project.urls]
"Homepage" = "https://github.com/lsymds/llmutils/concat"
"Bug Tracker" = "https://github.com/lsymds/llmutils"

[project.scripts]
llmutils-concat = "llmutils_concat.cli:concat"

[tool.setuptools]
packages = ["llmutils_concat"]

[tool.black]
line-length = 88
target-version = ['py36', 'py37', 'py38', 'py39']

[tool.isort]
profile = "black"
line_length = 88
